create new dataset without rownames

--- a/report/exploratory_analysis_life_expectancy_dataset.html
+++ b/report/exploratory_analysis_life_expectancy_dataset.html
@@ -312,7 +312,7 @@ $(document).ready(function () {
 
 
 <pre><code>## 
-Read 75.3% of 1048950 rows
+Read 81.0% of 1048950 rows
 Read 1048950 rows and 17 (of 17) columns from 0.180 GB file in 00:00:03</code></pre>
 <section id="smell-test-data" class="level2">
 <h2>Smell Test Data</h2>
@@ -394,7 +394,7 @@ Read 1048950 rows and 17 (of 17) columns from 0.180 GB file in 00:00:03</code></
 </section>
 <section id="average-duplicated-years" class="level2">
 <h2>Average duplicated years</h2>
-<p>To separate the data based on individual years, we created duplicates for years that are within the overlapping year intervals. Now, the task is to get an average for these duplicates.</p>
+<p>To separate the data based on individual years, we created duplicates for years that are within the overlapping year intervals. Now, the task is to get an average for these duplicates. Let’s check out how this data looks.</p>
 <pre><code>##    YEAR    GEO Age_group  Sex
 ## 1: 1980 Canada         0 Both
 ## 2: 1980 Canada         0 Both
@@ -409,6 +409,9 @@ Read 1048950 rows and 17 (of 17) columns from 0.180 GB file in 00:00:03</code></
 ## 4:   Margin of error of the death probability (m.e.(qx)) 1.8000e-04
 ## 5:    Probability of survival between age x and x+1 (px) 9.9024e-01
 ## 6: Number of life years lived between age x and x+1 (Lx) 9.9152e+04</code></pre>
+</section>
+<section id="done" class="level2">
+<h2>Done</h2>
 </section>
 
 
